--- a/src/style/services.scss
+++ b/src/style/services.scss
@@ -7,7 +7,7 @@
     text-align: left;
     margin: 0 auto;
     padding: 10px;
-    color: $title-option;
+    color: $text-1;
 
     &__cantidad_adultos,
     &__cantidad_ninos,
