--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,7 +1,8 @@
 $primary-color: #0095BF;
+$light-blue: #82C6D9;
 $secondary-color: #FF9000;
 $footer-color: #666666;
 $font-light: #FFFFFF;
 $wizard-color: #F2FCFF;
-$title-option: #575757;
+$text-1: #575757;
 $empty-space-gray: #B9B9B9;
