--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -19,6 +19,17 @@
             padding: 5px 10px;
             cursor: pointer;
         }
+        button {
+            background-color: $secondary-color;
+            width: 145px;
+            height: 30px;
+            color: $font-light;
+            border: none;
+
+            &:first-child {
+                margin-right: 10px;
+            }
+        }
     }
 
     &__logo--inner {
