--- a/src/style/program_search.scss
+++ b/src/style/program_search.scss
@@ -45,7 +45,34 @@
         font-size: 14px;
     }
 
-    &__card {
+    &__options {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+
+        .program_search {
+            &__choice_card {
+                width: 300px;
+                height: 190px;
+            }
+
+            &__choice_footer {
+                background-color: $light-blue;
+                color: $font-light;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 0 12px;
+                width: 100%;
+
+                & .choice__ver_detalle__button {
+                    
+                }
+            }
+        }
+    }
+
+    &__card{
         &_footer {
             background-color: $light-blue;
             color: $font-light;
