--- a/src/style/main_info.scss
+++ b/src/style/main_info.scss
@@ -3,12 +3,12 @@
 .main_info {
   background-color: $wizard-color;
   max-width: 1040px;
-  height: 500px;
+  height: 100%;
   text-align: center;
   margin: 0 auto;
   padding: 10px;
   color: $text-1;
-
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
   > div {
     height: 100%;
   }
@@ -28,38 +28,12 @@
       height: auto;
     }
 
-<<<<<<< HEAD
-    &__destino {
-        margin: 10px 0;
-        
-        &_header,
-        &_body {
-            display: flex;
-            > div:not(:last-child) {
-                margin-right: 10px;
-            }
-        }
-
-        &_body {
-            flex-direction: column;
-            
-            &_element {
-                display: flex;
-                align-items: center;
-
-                &:not(:last-child) {
-                    margin-bottom: 10px;
-                }
-            }
-        }
-=======
     &_body {
       display: flex;
       height: 200px;
       > div:not(:last-child) {
         margin-right: 10px;
       }
->>>>>>> main
     }
 
     &_body {
@@ -86,6 +60,8 @@
     background-position: center center;
     height: 100%;
     width: 100%;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   }
 
   &__presupuesto,
