--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,42 +1,49 @@
-@import "./variables";
+@import './variables';
 
 .home {
-    color: $font-light;
+  color: $font-light;
 
-    &__header-carousel {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: 400px;
-        background: url("../assets/show2.jpg");
+  &__header-carousel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 400px;
+    background: url('../assets/show2.jpg');
+  }
+  &__header-title {
+    margin-top: auto;
+  }
+
+  &__stepper {
+    width: 100%;
+    max-width: 700px;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
+
+    &--mobile {
+      display: none;
     }
-    &__header-title {
-        margin-top: auto;
+  }
+
+  &__move_buttons {
+    margin-top: 20px;
+    & button {
+      background-color: $secondary-color;
+      width: 250px;
+      color: $font-light;
+      border: none;
+      margin-top: 20px;
+      &:first-child {
+        margin-right: 10px;
+      }
     }
-
-    &__stepper {
-        width: 100%;
-        max-width: 700px;
-        align-items: center;
-        text-align: center;
-        margin: 0 auto;
-
-        &--mobile {
-            display: none;
-        }
-    }
-
+  }
+}
+@media all and (max-width: 700px) {
+  .main_info {
     &__move_buttons {
-        margin-top: 20px;
-        & button {
-            background-color: $secondary-color;
-            width: 250px;
-            color: $font-light;
-            border: none;
-
-            &:first-child {
-                margin-right: 10px;
-            }
-        }
+      background-color: red;
     }
+  }
 }
