--- a/src/style/program_detail.scss
+++ b/src/style/program_detail.scss
@@ -1,89 +1,87 @@
-@import "./variables";
+@import './variables';
 
 .program_detail {
-    color: $text-1;
-    text-align: left;
-    margin: 8px auto 0;
+	color: $text-1;
+	text-align: left;
+	margin: 8px auto 0;
 
-    &__wrapper {
-        width: 930px;
-    }
+	&__wrapper {
+		width: 930px;
+	}
 
-    &__header {
-        background: url("../assets/44.jpeg");
-        background-size: cover;
-        height: 265px;
-        color: $font-light;
-        display: flex;
-        justify-content: space-between;
-        padding: 40px 45px 0;
-        box-sizing: border-box;
+	&__header {
+		background: url('../assets/44.jpeg');
+		background-size: cover;
+		height: 265px;
+		color: $font-light;
+		display: flex;
+		justify-content: space-between;
+		padding: 40px 45px 0;
+		box-sizing: border-box;
 
-        &_title {
-            max-width: 450px;
-            font-size: 3em;
-            font-weight: 700;
-        }
+		&_title {
+			max-width: 450px;
+			font-size: 3em;
+			font-weight: 700;
+		}
 
-        &_service {
-            margin-top: auto;
-        }
-    }
+		&_service {
+			margin-top: auto;
+		}
+	}
 
-    &__extras {
-        display: flex;
-        justify-content: space-between;
-        align-content: center;
-        align-items: center;
-        padding: 0 45px;
-    }
+	&__extras {
+		display: flex;
+		justify-content: space-between;
+		align-content: center;
+		align-items: center;
+		padding: 0 45px;
+	}
 
-    & .extras {
-        &_left {
+	& .extras {
+		&_left {
+		}
 
-        }
+		&_right {
+			text-align: right;
 
-        &_right {
-            text-align: right;
+			& .extras_pago {
+				& span:not(:first-child) {
+					margin-left: 5px;
+				}
+			}
 
-            & .extras_pago {
-                & span:not(:first-child) {
-                    margin-left: 5px;
-                }
-            }
+			& .extras_action {
+				margin-top: 5px;
 
-            & .extras_action {
-                margin-top: 5px;
+				button {
+					background-color: $secondary-color;
+					width: 100px;
+					height: 30px;
+					color: $font-light;
+					border: none;
+					margin-left: 5px;
+				}
+			}
+		}
+	}
 
-                button {
-                    background-color: $secondary-color;
-                    width: 100px;
-                    height: 30px;
-                    color: $font-light;
-                    border: none;
-                    margin-left: 5px;
-                }
-            }
-        }
-    }
+	&__body {
+		& header {
+			height: 100%;
+		}
 
-    &__body {
-        & header {
-            height: 100%;
-        }
+		> div {
+			border: 1px #82c6d9 solid;
+		}
+	}
+	&__itinerario {
+		&_header {
+			display: flex;
 
-        > div {
-            border: 1px #82C6D9 solid;
-        }
-
-    }
-    &__itinerario {
-        &_header {
-            display: flex;
-
-            & .itinerario_dia {
-                margin-right: 40px;
-            }
-        }
-    }
+			& .itinerario_dia {
+				margin-right: 40px;
+			}
+		}
+	}
 }
