--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,8 +1,8 @@
-$primary-color: #0095BF;
-$light-blue: #82C6D9;
-$secondary-color: #FF9000;
+$primary-color: #0095bf;
+$light-blue: #82c6d9;
+$secondary-color: #ff9000;
 $footer-color: #666666;
-$font-light: #FFFFFF;
-$wizard-color: #F2FCFF;
+$font-light: #ffffff;
+$wizard-color: #f2fcff;
 $text-1: #575757;
-$empty-space-gray: #B9B9B9;
+$empty-space-gray: #b9b9b9;
