--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,5 +1,5 @@
-@import "./variables";
+@import './variables';
 
 .background_primary {
-    background-color: $primary-color;
+	background-color: $primary-color;
 }
