--- a/src/style/program_search.scss
+++ b/src/style/program_search.scss
@@ -1,95 +1,93 @@
-@import "./variables";
+@import './variables';
 
 .program_search {
-    color: $text-1;
-    text-align: left;
-    margin: 0 auto;
+	color: $text-1;
+	text-align: left;
+	margin: 0 auto;
 
-    &__main_card {
-        width: 930px;
-        height: 380px;
+	&__main_card {
+		width: 930px;
+		height: 380px;
+	}
 
-    }
+	&__main_left {
+		color: $font-light;
+		display: flex;
+		flex-direction: column;
 
-    &__main_left {
-        color: $font-light;
-        display: flex;
-        flex-direction: column;
-        
-        > p {
-            margin-top: auto;
-            align-items: flex-end;
-            align-self: flex-end;
-            justify-content: flex-end;
-        }
-    }
-    
-    & .MuiGrid-item:first-child {
-        background: url("../assets/44.jpeg");
-        background-size: cover;
-    }
+		> p {
+			margin-top: auto;
+			align-items: flex-end;
+			align-self: flex-end;
+			justify-content: flex-end;
+		}
+	}
 
-    &__main_right {
-        h3 {
-            margin: 0 0 40px;
-        }
+	& .MuiGrid-item:first-child {
+		background: url('../assets/44.jpeg');
+		background-size: cover;
+	}
 
-        &__extras {
-            display: flex;
-            font-size: 12px;
-            justify-content: space-between;
-        }
-    }
+	&__main_right {
+		h3 {
+			margin: 0 0 40px;
+		}
 
-    &__main_descripcion {
-        font-size: 14px;
-    }
+		&__extras {
+			display: flex;
+			font-size: 12px;
+			justify-content: space-between;
+		}
+	}
 
-    &__options {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
+	&__main_descripcion {
+		font-size: 14px;
+	}
 
-        .program_search {
-            &__choice_card {
-                width: 300px;
-                height: 190px;
-            }
+	&__options {
+		display: flex;
+		justify-content: space-between;
+		width: 100%;
 
-            &__choice_footer {
-                background-color: $light-blue;
-                color: $font-light;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                padding: 0 12px;
-                width: 100%;
+		.program_search {
+			&__choice_card {
+				width: 300px;
+				height: 190px;
+			}
 
-                & .choice__ver_detalle__button {
-                    
-                }
-            }
-        }
-    }
+			&__choice_footer {
+				background-color: $light-blue;
+				color: $font-light;
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				padding: 0 12px;
+				width: 100%;
 
-    &__card{
-        &_footer {
-            background-color: $light-blue;
-            color: $font-light;
-            display: flex;
-            justify-content: space-between;
-            padding: 9px 40px;
-            font-size: 1em;
-            width: 100%;
+				& .choice__ver_detalle__button {
+				}
+			}
+		}
+	}
 
-            > div {
-                display: flex;
-                align-items: center;
-            }
-        }
+	&__card {
+		&_footer {
+			background-color: $light-blue;
+			color: $font-light;
+			display: flex;
+			justify-content: space-between;
+			padding: 9px 40px;
+			font-size: 1em;
+			width: 100%;
 
-        &--forma_pago {
-            margin-left: 20px;
-        }
-    }
+			> div {
+				display: flex;
+				align-items: center;
+			}
+		}
+
+		&--forma_pago {
+			margin-left: 20px;
+		}
+	}
 }
