--- a/src/style/main_info.scss
+++ b/src/style/main_info.scss
@@ -37,12 +37,28 @@
 		&_body {
 			flex-direction: column;
 
-			&_element {
+			&_elements {
 				display: flex;
+				flex-wrap: wrap;
+				margin-top: 10px;
+			}
+
+			&_element {
 				align-items: center;
+				display: flex;
+				margin-bottom: 10px;
 
 				&:not(:last-child) {
-					margin-bottom: 10px;
+					margin-right: 10px;
+				}
+
+				& .main_info__destino_selected {
+					max-width: 120px;
+					min-width: 65px;
+
+					& input {
+						padding: 6px 8px;
+					}
 				}
 			}
 		}
@@ -67,7 +83,8 @@
 		text-align: left;
 	}
 
-	.fill_circle_primary {
+	.destino_selected--remove {
+		cursor: pointer;
 		fill: $primary-color;
 		margin-left: 10px;
 	}
