--- a/src/style/services.scss
+++ b/src/style/services.scss
@@ -8,6 +8,7 @@
   margin: 0 auto;
   padding: 10px;
   color: $text-1;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 
   &__cantidad_adultos,
   &__cantidad_ninos,
