WIP - Admin Home view

--- a/src/style/additional_info.scss
+++ b/src/style/additional_info.scss
@@ -8,6 +8,7 @@
 	margin: 0 auto;
 	padding: 10px;
 	color: $text-1;
+	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 
 	&__actividades_header,
 	&__perfil_viaje_header,
