Update logic to get result from program

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,7 +23,8 @@ footer {
 .program_search,
 .program_detail,
 .contact-agent,
-.admin__home {
+.admin__home,
+.admin__create-program {
 	flex: 1;
 }
 
